--- a/journal.org
+++ b/journal.org
@@ -6,7 +6,7 @@
 #+LANGUAGE:    en
 #+TAGS: [ PROGRAMMING : R(r) STAN(S) ]
 #+TAGS: [ TOOLS : ORGMODE(o) GIT(g)  ]
-#+TAGS: PAPER(P) VIDEO(V) MEETING(m) REPORT(V)
+#+TAGS: PAPER(P) VIDEO(V) MEETING(m) SEMINAR(s)
 #+SEQ_TODO: TODO(t!) STARTED(s!) INTERRUPTED(i!) DONE(d!) 
 #+SEQ_TODO: REWORK(r!)
 
@@ -169,7 +169,7 @@ communications had been optimized for the run, which explains the
 difference between the simulation and the reality.
 
 *** 2019-04-30 tuesday
-**** Installed Emacs and Org-mode and all required dependencies.
+**** Installed Emacs and Org-mode and all required dependencies. :ORGMODE:
 Followed the given MOOC to understand how Org-mode functions, and how
 to take efficient notes. Learned the basics of org-mode, and of the
 keyboard shortcuts introduced by the provided emacs initialization.
@@ -308,7 +308,7 @@ best way to improve artificial systems in the future.
   distribution
 - Sampling can also help simulate the model, to check it, or to
   simulate new predictions.
-***** About linear models
+***** About linear and polynomial models
 - Normal distributions are extremely used because they are common in
   nature and easy to calculate with.
 - Two perspectives: ontological and epistemological. The first sees
@@ -321,7 +321,12 @@ best way to improve artificial systems in the future.
 - Priors need to be at least a little precise, otherwise they bring
   nothing and the posterior will only depend on the data. Bad priors
   are relatively harmless, only useless.
-***** About polynomial models
+- Polynomial regression is not advised
+***** About multivariate linear models
+- Multivariate linear models are much like linear models but with
+  several variables. For example, the likelihood y follows a normal
+  distribution based on alpha + beta_r x + beta_s z with beta_r and beta_s
+  coefficients that measure the association between x and y.
 **** STARTED [[https://www.youtube.com/watch?v=BWEtS3HuU5A&list=PLDcUM9US4XdM9_N6XUUFrhghGJ4K25bFc&index=10 ][Listened to several lectures by Richard McElreath]] :VIDEO:STAN:
 :LOGBOOK:  
 - State "STARTED"    from "INTERRUPTED" [2019-05-09 jeu. 17:08]
@@ -594,7 +599,7 @@ stan_hist(fit)
 [[file:./images/ex2_hist.png]]
 *** 2019-05-09 thursday
 **** Continued to read the book, notes on May 3rd section
-**** Continued watching the MOOC, particularly the first and fourth modules
+**** Continued watching the MOOC, particularly the first and fourth modules :ORGMODE:
 **** DONE An example with generated quantities ([[Generated Quantities][Reworked in friday's entry]]) :STAN:R:
 :LOGBOOK:  
 - State "DONE"       from "STARTED" [2019-05-09 jeu. 13:51]
@@ -825,6 +830,7 @@ ggplot(tmp, aes(x=x, y=y, color=origin)) + geom_point(alpha=0.5)
 
 This way we don't have to make a mean that erases the noise's effect,
 and the generated y could definitely be used for further calculation. 
+
 **** Tried to use Stan with more complex examples :STAN:R:
 ***** With a full polynomial model (needs a rework):
 We'll assume for this one that the noise follows a simple model, to
@@ -962,7 +968,7 @@ Surprisingly, the part on polynomial regression is very sparse and
 doesn't really help us make a functional model.
 *** 2019-05-13 monday
 **** Continued to read the book, notes on May 3rd section
-**** A second try with a polynomial model                            :STAN:R:
+**** A second try with a polynomial model :STAN:R:
 We still have a simple model for the noise, and three parameters:
 second_ degree, first_ degree and intercept.
 
@@ -978,19 +984,19 @@ generate_dataset=function(intercept, first_degree, second_degree, N, min_x=0, ma
 }
 
 df=generate_dataset(100,6,2, 500, sigma=150)
-df$x2=df$x^2 #Need to add it here because we cannot in the stan model
+x2=df$x^2 #Need to add it here because we cannot in the stan model
 head(df)
 #+end_src
 
 #+RESULTS:
 :  
-:    x            y   x2
-: 1 13   729.215216  169
-: 2 60  7439.417049 3600
-: 3 83 14208.692665 6889
-: 4 12   216.362362  144
-: 5  2    -3.035517    4
-: 6 35  2590.543016 1225
+:    x         y
+: 1 58 7024.5313
+: 2 50 5312.4574
+: 3 54 6308.8001
+: 4 64 9105.7649
+: 5 37 3092.9677
+: 6  2  265.1541
 
 #+begin_src R :results output :session *R* :exports both
 modelString = "data {
@@ -1015,31 +1021,31 @@ sm = stan_model(model_code = modelString)
 #+end_src
 
 #+begin_src R :results output :session *R* :exports both
-data = list(N=nrow(df),x=df$x,x2=df$x2,y=df$y)
+data = list(N=nrow(df),x=df$x,x2=x2,y=df$y)
 fit = sampling(sm,data=data, iter=500, chains=8)
 print(fit)
 #+end_src
 
 #+RESULTS:
 #+begin_example
-Inference for Stan model: 6001096c2a1f8ca4aec729de06bdbead.
+Inference for Stan model: 9b36de8503b4c2eb2dac2af3794b006a.
 8 chains, each with iter=500; warmup=250; thin=1; 
 post-warmup draws per chain=250, total post-warmup draws=2000.
 
                   mean se_mean    sd     2.5%      25%      50%      75%
-intercept       121.55    1.24 20.75    81.20   107.04   121.62   136.34
-first_degree      4.75    0.05  0.94     2.93     4.08     4.75     5.40
-second_degree     2.01    0.00  0.01     2.00     2.01     2.01     2.02
-sigma           150.62    0.14  4.76   141.12   147.41   150.53   154.02
-lp__          -2751.30    0.06  1.45 -2755.14 -2752.01 -2750.98 -2750.25
+intercept       125.69    1.17 19.11    88.25   112.41   126.28   138.38
+first_degree      4.84    0.05  0.88     3.16     4.25     4.82     5.42
+second_degree     2.01    0.00  0.01     1.99     2.00     2.01     2.02
+sigma           147.46    0.14  4.67   138.53   144.41   147.27   150.55
+lp__          -2740.89    0.07  1.40 -2744.25 -2741.63 -2740.57 -2739.85
                  97.5% n_eff Rhat
-intercept       159.41   278 1.02
-first_degree      6.56   328 1.02
-second_degree     2.03   462 1.01
-sigma           159.71  1108 1.01
-lp__          -2749.49   567 1.01
+intercept       164.47   267 1.03
+first_degree      6.65   331 1.02
+second_degree     2.03   424 1.02
+sigma           156.55  1045 1.00
+lp__          -2739.16   445 1.02
 
-Samples were drawn using NUTS(diag_e) at Mon May 13 10:23:09 2019.
+Samples were drawn using NUTS(diag_e) at Mon May 13 16:26:10 2019.
 For each parameter, n_eff is a crude measure of effective sample size,
 and Rhat is the potential scale reduction factor on split chains (at 
 convergence, Rhat=1).
@@ -1067,7 +1073,7 @@ sigma:
 
 #+begin_src R :results output :session *R* :exports both
 df=generate_dataset(100,6,2, 500, sigma=4)
-df$x2=df$x^2
+x2=df$x^2
 modelString = "data {
     int<lower=0> N;
     vector[N] x;
@@ -1087,7 +1093,7 @@ model {
 }
 "
 sm = stan_model(model_code = modelString)
-data = list(N=nrow(df),x=df$x,x2=df$x2,y=df$y)
+data = list(N=nrow(df),x=df$x,x2=x2,y=df$y)
 fit = sampling(sm,data=data, iter=500, chains=8)
 print(fit)
 #+end_src
@@ -1143,7 +1149,7 @@ value (which is not surprising).
 
 #+begin_src R :results output :session *R* :exports both
 df=generate_dataset(100,6,2, 500, sigma=986)
-df$x2=df$x^2
+x2=df$x^2
 modelString = "data {
     int<lower=0> N;
     vector[N] x;
@@ -1163,7 +1169,7 @@ model {
 }
 "
 sm = stan_model(model_code = modelString)
-data = list(N=nrow(df),x=df$x,x2=df$x2,y=df$y)
+data = list(N=nrow(df),x=df$x,x2=x2,y=df$y)
 fit = sampling(sm,data=data, iter=500, chains=8)
 print(fit)
 #+end_src
@@ -1202,3 +1208,50 @@ stan_trace(fit)+ scale_color_manual(values = blues9)
 
 #+RESULTS:
 [[file:./images/ex4_reworked_trace_high_sigma.png]]
+**** A look at generated quantities with a polynomial model :STAN:R:
+
+#+begin_src R :results output :session *R* :exports both
+df=generate_dataset(100,6,2, 500, sigma=125)
+x2=df$x^2
+modelString = "data {
+    int<lower=0> N;
+    vector[N] x;
+    vector[N] x2;
+    vector[N] y;
+}
+parameters {
+    real intercept;
+    real first_degree;
+    real second_degree;
+    real<lower=0> sigma;
+}
+
+model {
+    y ~ normal(second_degree*x2+first_degree*x+intercept, sigma);
+}
+generated quantities {
+   real x_pos = x[categorical_rng(rep_vector(1,N) / N)];
+   real y_pos; // posterior predictions
+   y_pos = normal_rng(second_degree*(x_pos^2)+first_degree*x_pos+intercept, sigma);
+}
+"
+sm = stan_model(model_code = modelString)
+data = list(N=nrow(df),x=df$x,x2=x2,y=df$y)
+fit = sampling(sm,data=data, iter=500, chains=8)
+#+end_src
+
+#+begin_src R :results output graphics :file ./images/ex4_reworked_comparative_plot.png :exports both :width 600 :height 400 :session *R* 
+extracted=rstan::extract(fit)
+df_generated = data.frame(x=extracted$x_pos, y=extracted$y_pos, origin='generated')
+df_generated = df_generated[sample(nrow(df_generated), nrow(df)), ]
+df$origin = 'initial'
+tmp = rbind(df, df_generated)
+ggplot(tmp, aes(x=x, y=y, color=origin)) + geom_point(alpha=0.6)
+#+end_src
+
+#+RESULTS:
+[[file:./images/ex4_reworked_comparative_plot.png]]
+
+Once again, the data generated from the parameters found by stan seems
+quite precise and close enough to the data we generated at the
+beginning.
